Upgrade findbugs, use mvn plugin